# Agora-AI

./: .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.deploy.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  todo.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: daily_summary.py
backend/src/: __init__.py  client.py  log.py  session.py  summary.py
backend/src/actions/apply_leave/: docs.md  index.py
backend/src/actions/auth/: index.py
backend/src/actions/delete_leave/: index.py
backend/src/actions/fetch_absence/: index.py
backend/src/actions/fetch_grades/: index.py
backend/src/actions/workstudy/: index.py
backend/src/agent/: __init__.py  agent.py  conv_logger.py  errors.py  memory.py  reflection.py  tool_meta.py  tools.py
backend/src/api/: app.py  models.py  routes.py  state.py
backend/src/parsers/: __init__.py  _utils.py  grades.py  perchk.py  schedule.py  workstudy.py
backend/src/storage/: __init__.py  _db.py  history.py  messages.py  sessions.py  settings.py  usage.py  user_settings.py
backend/src/utils/: alert.py  date.py
backend/tests/: test_agent_flow.py  test_chat_gate.py  test_clear_conversation.py  test_session_reproduction.py  test_usage.py  test_workstudy.py
cloudflared/: config.yml
docs/: AI_GUIDE.md  APP_PLAN.md  CONTRIBUTING.md  product-tiers.md  rag_design.md  security-analysis-2026-06.md  system-design.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
ops/: README.md
public/: CONTRIBUTING.md
scripts/: apply_leave.py  chatbot.py  fetch_absence.py  fetch_grades.py  fetch_schedule.py  manage_leaves.py  serve.py
src/: __init__.py  client.py  log.py  parser.py  session.py
tests/: conftest.py  (+1 more)
(+163 files in other folders)
