[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpcu-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.13.4",
    "python-dotenv==1.2.2",
    "Pillow==12.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]